apps/affine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine
  namespace: affine
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: affine
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
        - name: affine
          image: ghcr.io/toeverything/affine:stable@sha256:b649f5ce2384ffdf13c23bccf81d759e15973d59d0b0058af65d895a84373099
          ports:
            - containerPort: 3010
          resources:
            limits:
              memory: 2Gi
          readinessProbe:
            tcpSocket:
              port: 3010
            periodSeconds: 15
            failureThreshold: 3
          volumeMounts:
            - name: storage
              mountPath: /root/.affine/storage
            - name: config
              mountPath: /root/.affine/config
      volumes:
        - name: postgres-data
          hostPath:
            path: /data/crypt/affine/postgres
            type: DirectoryOrCreate
        - name: redis-data
          hostPath:
            path: /data/crypt/affine/redis
            type: DirectoryOrCreate
        - name: storage
          hostPath:
            path: /data/crypt/affine/storage
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /data/crypt/affine/config
            type: DirectoryOrCreate
