apps/affine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine
  namespace: affine
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Affine
    gethomepage.dev/group: Infra
    gethomepage.dev/icon: affine-light.png
    gethomepage.dev/pod-selector: app=affine
spec:
  rules:
    - host: affine.khazadum.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: affine
                port:
                  number: 80
